--- a/package.json
+++ b/package.json
@@ -2,13 +2,19 @@
   "name": "nwitter",
   "version": "0.1.0",
   "private": true,
+  "homepage" : ".",
   "dependencies": {
+    "@babel/plugin-bugfix-v8-spread-parameters-in-optional-chaining": "^7.13.12",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "firebase": "^8.4.2",
+    "peer": "^0.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
@@ -33,5 +39,20 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JWS-2235/nwitter.git"
+  },
+  "author": "jws",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/JWS-2235/nwitter/issues"
+  },
+  "keywords": [
+    "nwitter"
+  ]
 }
